# device_control

./: README.md
.github/workflows/: main.yaml
controlled_device_example/: CMakeLists.txt  README.md  package.xml
controlled_device_example/include/controlled_device_example/: DeviceNode.hpp
controlled_device_example/src/: device_main.cpp
controlled_device_example/src/controlled_device_example/: DeviceNode.cpp
device_control/: CMakeLists.txt  package.xml
device_control/include/device_control/: AuxiliarNode.hpp  ControlledLifecycleNode.hpp  ControllerNode.hpp
device_control/launch/: auxiliar.launch.py
device_control/src/: auxiliar_main.cpp
device_control/src/device_control/: AuxiliarNode.cpp  ControlledLifecycleNode.cpp  ControllerNode.cpp
device_control/test/: CMakeLists.txt  test_auxiliar.cpp  test_control.cpp
device_control_msgs/: CMakeLists.txt  README.md  device_control_bridge_mapping_rule.yaml  package.xml
device_control_msgs/msg/: Control.msg  DeviceInfo.msg
install/rqt_device_control/include/rqt_device_control/: SystemController.hpp  device_control.hpp
rqt_device_control/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_device_control/include/rqt_device_control/: SystemController.hpp  utils.hpp
rqt_device_control/scripts/: rqt_device_control
rqt_device_control/src/rqt_device_control/: SystemController.cpp  device_control.cpp  device_control.ui
