<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controlled_device_example</name>
  <version>0.0.1</version>
  
  <description>This package contains the ROS2 Driver for Technaid IMUs</description>

  <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>
 
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>device_control</depend>
  <depend>mocap_msgs</depend>
  <depend>mcs_technaid</depend>
 
  <export>
  </export>
</package>
