<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>device_control</name>
  <version>0.0.1</version>
  <description>Control tools for MOCAP4ROS2 Project</description>
  <maintainer email="fmrico@gmail.com">fmrico</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>device_control_msgs</depend>

  <export>
  </export>
</package>
